--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="sidebar">
     <div class="header-container"style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px;">
         <h1>Continue with Mobile No.</h1>
     <button class="button" (click)="goHome()">
