--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 .navbar {
     width: 100%;
-    height: 10%;
+    height: auto;
     background-image: url('../../../assets/logo/Rectangle\ 6.png');
     position: fixed;
     top: 0;
@@ -23,6 +23,7 @@
     display: flex;
     align-items: center;
     opacity: 1;
+    padding: 10px;
 }
 
 .navbar .logo img {
@@ -32,7 +33,7 @@
 
 .navbar .menu {
     display: flex;
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     flex-wrap: nowrap;
     align-items: center;
 }
@@ -40,7 +41,7 @@
 .navbar .menu a {
     color: white;
     text-decoration: none;
-    margin: 0 15px;
+    margin: 0 19px;
     font-size: 16px;
     cursor: pointer;
     white-space: nowrap;
@@ -64,6 +65,7 @@
     display: flex;
     align-items: center;
     text-align: center;
+    margin-left: -10px;
 }
 
 .navbar .login-btn img {
@@ -111,7 +113,8 @@
     }
 
     .navbar .menu {
-        display: none; /* Hide menu for small screens */
+        display: none; 
+        margin-left: -20px;/* Hide menu for small screens */
     }
 
     .navbar .hamburger {
