--- a/src/app/components/language-switcher/language-switcher.component.css
+++ b/src/app/components/language-switcher/language-switcher.component.css
@@ -1,25 +1,61 @@
-.language-switcher{
+.language-switcher {
     width: 100%;
-    margin-top: -60px;
+    margin-top: -50px;
+    display: flex; 
     justify-content: center;
 }
 
 
-.language-switcher button{
-    width: 110px;
-height: 30%;
-top: 506px;
-left: 296px;
-padding: 17px 24px 17px 24px;
-gap: 10px;
-border-radius: 1000px ;
-opacity: 0px;
-border: none;
-background-color: white;
+.language-switcher button {
+    width: 10%;
+    height: auto;
+    padding: 10px 20px;
+    gap: 10px;
+    border-radius: 100px;
+    opacity: 0px;
+    font-size: 14px;
+    font-family: Inter, sans-serif;
+    border: none;
+    background-color: white;
 
 }
 
-.language-switcher button:hover{
+.language-switcher button:hover {
     background: linear-gradient(90deg, rgba(250, 204, 21, 0.1) 0%, rgba(249, 115, 22, 0.1) 100%);
 
+}
+
+
+/* Media Queries for Responsiveness */
+@media (max-width: 1024px) {
+    .language-switcher button {
+        width: 100px; /* Adjust button width for medium screens */
+        font-size: 14px; /* Adjust font size for medium screens */
+    }
+}
+
+@media (max-width: 768px) {
+    .language-switcher {
+        padding: 20px;
+        margin-left: 30px;
+        margin-top: -40px; /* Adjust margin for smaller screens */
+    }
+
+    .language-switcher button {
+        width: 100%; /* Full width for buttons on small screens */
+        font-size: 12px; /* Adjust font size for small screens */
+        padding: 10px 15px; /* Adjust padding for small screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .language-switcher {
+        margin-top: -20px; /* Further adjust margin for very small screens */
+    }
+
+    .language-switcher button {
+        width: 50%; /* Full width for buttons on very small screens */
+        font-size: 10px; /* Further adjust font size for very small screens */
+        padding: 10px; /* Adjust padding for very small screens */
+    }
 }
