--- a/src/app/components/otp-verification/otp-verification.component.html
+++ b/src/app/components/otp-verification/otp-verification.component.html
@@ -1,4 +1,4 @@
-<div class="con">
+<div class="sidebar">
     <div class="header-container">
         <button class="button">
             <span class="X"></span>
