--- a/src/app/pages/meetastrologer/meetastrologer.component.css
+++ b/src/app/pages/meetastrologer/meetastrologer.component.css
@@ -16,7 +16,8 @@
 }
 
 .main-content .title h1 {
-    font-family: 'Montserrat', sans-serif;
+    
+    font-family: 'Inter', sans-serif;
     font-size: 48px;
     font-weight: 400;
     line-height: 58.51px;
@@ -27,7 +28,8 @@
 }
 
 .main-content .title p {
-    font-family: 'Montserrat', sans-serif;
+  
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 400;
     line-height: 28px;
