--- a/src/app/components/astrologer/astrologer.component.html
+++ b/src/app/components/astrologer/astrologer.component.html
@@ -9,7 +9,7 @@
                     illuminate your path to self-discovery and growth.</p>
             </div>
             <div class="col-md-6">
-                <button class="btn"> View All</button>
+                <button class="btn" routerLink="/ourastrologers"> View All</button>
             </div>
         </div>
             </div>
