--- a/src/app/components/discoverdaily/discoverdaily.component.html
+++ b/src/app/components/discoverdaily/discoverdaily.component.html
@@ -7,7 +7,7 @@
                         <h1>Discover Daily Horoscope from the Stars!</h1>
                     </div>
                     <div class="col-md-6">
-                        <button class="btn"> View All</button>
+                        <button class="btn" routerLink="/daliyhoroscope"> View All</button>
                     </div>
                 </div>
             </div>
