--- a/src/app/components/guid/guid.component.html
+++ b/src/app/components/guid/guid.component.html
@@ -23,7 +23,7 @@
                             enim sit neque enim enim. Integer semper pretium felis libero magna a
                             ipsum vivamus vitae. Pulvinar dolor nibh tortor ornare nullam risus mi. </p>
 
-                        <button class="btn">Read More...</button>
+                        <button class="btn" routerLink="/About">Read More...</button>
                     </div>
                 </div>
             </div>
