--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -10,7 +10,7 @@
           <a routerLink="/ourastrologers" (click)="showContent('Our Astrologers')">Our Astrologers</a>
           <a routerLink="/daliyhoroscope" (click)="showContent('Daily Horoscope')">Daily Horoscope</a>
           <a  routerLink="/kundli"(click)="showContent('Free Kundli')">Free Kundli</a>
-          <a href="#" (click)="showContent('Quotes of the Day')">Quotes of the Day</a>
+          <a routerLink="/daily-horoscope" (click)="showContent('Quotes of the Day')">Quotes of the Day</a>
           <a routerLink="/testimonials"(click)="showContent('Testimonials')">Testimonials</a>
           <button class="login-btn" [routerLink]="['/login']">
               <img src="../../../assets/logo/User.png" alt=""> Login
