--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -14,7 +14,7 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 100%;
+  height: auto;
   padding: 20px;
   position: relative;
   opacity: 1;
@@ -31,6 +31,8 @@
   padding: 10px 10px;
   flex-wrap: nowrap;
   margin-bottom: 8%;
+  max-width: 100%; /* Ensure navbar does not exceed viewport */
+  overflow: hidden;
 }
 
 .navbar .logo {
@@ -67,7 +69,7 @@
 .navbar .login-btn {
   background: linear-gradient(90deg, #FFB84D 0%, #FF8C00 100%);
   color: rgb(6, 6, 6);
-  Width: auto;
+  Width: 90px;
   Height: 30px;
   border: none;
   padding: 10px 15px;
@@ -145,6 +147,7 @@
   border-radius: 1000px;
   font-family: 'Inter', sans-serif;
   margin-bottom: 10%;
+  flex-wrap: wrap; 
 
 }
 
@@ -185,6 +188,11 @@
   text-decoration-skip-ink: none;
 }
 
+.main-container .batt,
+.main-container .btn-p {
+    width: 20%; /* Ensure buttons do not exceed width */
+    max-width: 100%; /* Prevent overflow */
+}
 @media (max-width: 1100px){
   
   .btn-g {
@@ -310,6 +318,53 @@
 
   .main-container .batt,
   .main-container .btn-p {
+    
+    width: 100%; /* Increase width on very small screens */
+  }
+}
+
+
+@media (max-width: 329px) {
+  .navbar .menu {
+    font-size: 0.8rem; /* Smaller font size for very small screens */
+  }
+
+  .navbar .menu a {
+    text-align: left;
+    margin: 0 5px; /* Reduce margin for menu items */
+  }
+
+  .navbar .login-btn {
+    width: 40%; /* Full width for login button */
+    font-size: 14px; /* Smaller font size */
+  }
+
+  .hero h3 {
+    font-size: 2rem; /* Further reduce font size */
+  }
+
+  .the-text {
+    font-size: 2rem; 
+    margin-right: 10px;
+  }
+  .jyotish-connect {
+    font-size: 2rem; /* Further reduce font size */
+  }
+
+  .hero p {
+    font-size: 0.6rem; /* Smaller font size for paragraph */
+  }
+
+  .btn-g {
+    font-size: 10px;
+    flex-direction: column; /* Stack buttons vertically */
+    gap: 5px; /* Reduce gap between buttons */
+    align-items: center;
+  }
+
+  .main-container .batt,
+  .main-container .btn-p {
+    
     width: 100%; /* Increase width on very small screens */
   }
 }
