--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -212,6 +212,7 @@
 
 }
 
+
 /* Media Queries for Mobile Devices */
 @media (max-width: 768px) {
   .navbar .menu {
@@ -270,7 +271,7 @@
 
   .main-container .batt,
   .main-container .btn-p {
-    width: 30%;
+    width: 40%;
     /* Increase width on smaller screens */
     max-width: none;
     font-size: 12px;
@@ -295,15 +296,15 @@
   }
 
   .hero h3 {
-    font-size: 2.2rem; /* Further reduce font size */
+    font-size: 1.5rem; /* Further reduce font size */
   }
 
   .the-text {
-    font-size: 2.2rem; 
+    font-size: 1.5; 
     margin-right: 10px;
   }
   .jyotish-connect {
-    font-size: 2.2rem; /* Further reduce font size */
+    font-size: 1.5rem; /* Further reduce font size */
   }
 
   .hero p {
@@ -311,6 +312,7 @@
   }
 
   .btn-g {
+    width: 100%;
     flex-direction: column; /* Stack buttons vertically */
     gap: 5px; /* Reduce gap between buttons */
     align-items: center;
@@ -319,7 +321,7 @@
   .main-container .batt,
   .main-container .btn-p {
     
-    width: 100%; /* Increase width on very small screens */
+    width: 50%; /* Increase width on very small screens */
   }
 }
 
@@ -357,6 +359,7 @@
 
   .btn-g {
     font-size: 10px;
+    width: 100%;
     flex-direction: column; /* Stack buttons vertically */
     gap: 5px; /* Reduce gap between buttons */
     align-items: center;
