--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -883,4 +883,7 @@
         </div>
     </div>
 </div>
+<div class="button-container">
+    <button class="button">Load More...</button>
+</div>
 </div>
