--- a/src/app/pages/dailyhoroscope/dailyhoroscope.component.html
+++ b/src/app/pages/dailyhoroscope/dailyhoroscope.component.html
@@ -1,10 +1,21 @@
 <app-header />
 <div class="main-container">
-    <div class="title">
-        <h1>Daily Horoscope from the Stars!</h1>
-        <p>Horoscopes that we provide on Jyotish Connect are as per Vedic Astrology, which is
-            based on Moon Sign. Get your free horoscope to know what stars have in store for you.
-            Select your Zodiac Sign below to read predictions and much more:</p>
+    <div class="flex-container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card1">
+                    <h1>Daily Horoscope from the Stars!</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7 ">
+                <div class="card1">
+                    <p>Horoscopes that we provide on Jyotish Connect are as per Vedic Astrology, which is
+                        based on Moon Sign. Get your free horoscope to know what stars have in store for you. Select your Zodiac Sign below to read predictions and much more:</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="horoscope-container">
         <div class="card-container">
