--- a/src/app/pages/kundli/kundli.component.html
+++ b/src/app/pages/kundli/kundli.component.html
@@ -1,11 +1,21 @@
 <app-header />
 
-<div class="main-container">
-    <div class="main">
-        <h1>Free Kundli Online</h1>
-        <p>Kundli is the term used for Birth Chart in Vedic Astrology. Twelve houses of Kundli show ascendant and planet
-            position in various zodiac signs at the time of birth as seen from the place of birth.</p>
+<div class="flex-container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card1">
+                <h1>Free Kundli Online</h1>
+            </div>
+        </div>
     </div>
+    <div class="row">
+        <div class="col-md-6 ">
+            <div class="card1">
+                <p>Kundli is the term used for Birth Chart in Vedic Astrology. Twelve houses of Kundli show ascendant and planet position in various zodiac signs at the time of birth as seen from the place of birth.</p>
+            </div>
+        </div>
+    </div>
+</div>
     <div class="main-content" style="display: flex;">
         <img src="../../../assets/kundli/Replace Image Here (6).png" alt="">
 
