--- a/src/app/pages/ourastrologers/ourastrologers.component.html
+++ b/src/app/pages/ourastrologers/ourastrologers.component.html
@@ -1,11 +1,10 @@
 <app-header />
 <div class="main-container">
-    <div class="title">
+    <!-- <div class="title">
         <h1>Meet our Astrologers.</h1>
         <p>Unlock the secrets of the universe with guidance from our expert astrologers. Discover insights that
             illuminate your path to self-discovery and growth.</p>
-            
-<!-- The search bar -->
+
 <div class="search-container">
     <input type="text" placeholder="Search here for astrologer...">
     <button>
@@ -13,10 +12,41 @@
         <i class="fas fa-search"></i>
     </button>
 </div>
+</div> -->
+<div class="flex-container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card1">
+                <h1>Meet our Astrologers.</h1>
+            </div>
+        </div>
     </div>
+    <div class="row">
+        <div class="col-md-6 ">
+            <div class="card1">
+                <p>Unlock the secrets of the universe with guidance from our expert astrologers. Discover insights that illuminate your path to self-discovery and growth.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-5 ">
+            <div class="card1">
+                <div class="search-container">
+                    <input type="text" placeholder="Search here for astrologer...">
+                    <button>
+                        <img src="../../../assets/Messages, Conversation/search.png" alt="" >
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+               
+            </div>
+        </div>
+    </div>
+</div>
     <app-language-switcher />
     <app-card />
 </div>
+
 
 
 
