--- a/src/app/pages/testimonials/testimonials.component.html
+++ b/src/app/pages/testimonials/testimonials.component.html
@@ -1,13 +1,33 @@
 <app-header />
 <div class="main-container">
-    <div class="main-content">
+    <!-- <div class="main-content">
         <h1>Real Stories, Real Transformations</h1>
         <div class="col-md-8" style="margin-left: 17%;">
             <p>"Our Happy Customers' Testimonials" is a shining testament to the trust and satisfaction of our valued
                 clients. Each heartfelt review reflects the profound impact our astrological insights and guidance have
                 had on their lives,</p>
         </div>
+    </div> -->
+    <div class="flex-container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card1">
+                    <h1>Real Stories, Real Transformations</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7 ">
+                <div class="card1">
+                    <p>"Our Happy Customers' Testimonials" is a shining testament to the trust and satisfaction of our valued
+                        clients. Each heartfelt review reflects the profound impact our astrological insights and guidance have
+                        had on their lives,</p>
+                </div>
+            </div>
+        </div>
     </div>
+    
+
     <div class="section">
         <div class="card-container">
             <div class="row">
@@ -188,12 +208,12 @@
             </div>
         </div>
     </div>
-    
-
-
-    <div class="pages">
+    <div class="flex">
         <app-qday />
+        <div>
+            <!-- <app-blogs /> -->
+        </div>
 
-        <app-blogs />
         <app-footer />
     </div>
+       
