--- a/src/app/components/astrologer/astrologer.component.css
+++ b/src/app/components/astrologer/astrologer.component.css
@@ -6,39 +6,33 @@
 }
 
 .titel h1 {
-    font-family: Inter, sans-serif;
-    font-size: 2.8rem;
+    font-family: 'Inter', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 300;
     line-height: 1.5;
     text-align: left;
     color: #1E3A8A;
 }
 
-.button {
-    gap: 50px;
-}
 
-.button p {
-    font-family: Inter, sans-serif;
+.flex-container p {
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.3;
     text-align: left;
     margin-right: 60px;
+    color: grey;
 }
 
-.button .btn {
-    width: 20%;
+.btn {
     height: auto;
     padding: 10px 20px;
     border-radius: 1000px;
-    color: rgba(26, 26, 26, 1);
-    opacity: 0px;
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 500;
     line-height: 1;
-    margin-bottom: 30px;
-    margin-left: 100px;
     background: linear-gradient(90deg, #FACC15 0%, #F97316 100%);
 }
 
@@ -68,7 +62,8 @@
 
 .card p {
     text-align: center;
-    font-family: Inter, sans-serif;
+    font-family: 'Inter', sans-serif;
+    color: grey;
 }
 
 
