--- a/src/app/components/astrologer/astrologer.component.html
+++ b/src/app/components/astrologer/astrologer.component.html
@@ -1,50 +1,53 @@
 <div class="main-container">
     <div class="titel">
         <h1>Explore the Stars with Our Astrologers.</h1>
+        <div>
+            <div class="flex-container">
+            <div class="row">
+                <div class="col-md-9">
+                    <p>
+                        Unlock the secrets of the universe with guidance from our expert
+                        astrologers. Discover insights that illuminate your path to
+                        self-discovery and growth.
+                    </p>
+                </div>
+                <div class="col-md-3 d-flex justify-content-end align-items-center">
+                    <button class="btn" routerLink="/ourastrologers">View All</button>
+                </div>
+            </div>   
+        </div>
+    </div>
         <div class="card-container">
             <div class="row">
-            <div class="button" style="display: flex;">
-                <div class="col-md-9">
-                <p>Unlock the secrets of the universe with guidance from our expert astrologers. Discover insights that 
-                    illuminate your path to self-discovery and growth.</p>
-            </div>
-            <div class="col-md-6">
-                <button class="btn" routerLink="/ourastrologers"> View All</button>
-            </div>
-        </div>
-            </div>
-        </div>
-            <div class="card-container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="card">
-                            <img src="../../../assets/images/image.png" alt="">
-                            <h3>Saahil Kohli</h3>
-                            <p>Vastu Astrologer</p>
-                        </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="../../../assets/images/image.png" alt="">
+                        <h3>Saahil Kohli</h3>
+                        <p>Vastu Astrologer</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <img src="../../../assets/images/image (1).png" alt="">
-                            <h3>Vijaylakshmi Krishna </h3>
-                            <p>Vastu Astrologer</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="../../../assets/images/image (1).png" alt="">
+                        <h3>Vijaylakshmi Krishna </h3>
+                        <p>Vedic Astrology</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <img src="../../../assets/images/image (2).png" alt="">
-                            <h3>Dr. Hemant Barua </h3>
-                            <p>Vastu Astrologer</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="../../../assets/images/image (2).png" alt="">
+                        <h3>Dr. Hemant Barua </h3>
+                        <p>Vedic Astrology</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <img src="../../../assets/images/image (3).png" alt="">
-                            <h3>Sanjay B. Jumaani</h3>
-                            <p>Vastu Astrologer</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <img src="../../../assets/images/image (3).png" alt="">
+                        <h3>Sanjay B. Jumaani</h3>
+                        <p>Astro Numerologist</p>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 </div>
