--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="hedar">
-        <div class="card-container">
+        <!-- <div class="card-container">
             <div class="row">
                 <div class="button" style="display: flex;">
                     <div class="col-md-9">
@@ -11,6 +11,20 @@
                     </div>
                 </div>
             </div>
+        </div> -->
+
+        <div>
+            <div class="row">
+                <div class="col-md-9">
+                    <h1>
+                        Our Blogs: Navigating Life Through the Stars
+                    </h1>
+                </div>
+                <div class="col-md-3 d-flex justify-content-end align-items-center">
+                    <button class="btn" routerLink="/ourastrologers">View All</button>
+                </div>
+            </div>
+                
         </div>
         <div class="card-container">
             <div class="row">
