--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 .navbar {
     width: 100%;
     height: auto;
+    padding: 5px 20px;
     background-image: url('../../../assets/logo/Rectangle\ 6.png');
     position: fixed;
     top: 0;
@@ -10,14 +11,12 @@
 
 }
 
-.navbar {
+/* .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
-    margin: 0;
 
-}
+} */
 
 .navbar .logo {
     display: flex;
@@ -26,9 +25,15 @@
     padding: 10px;
 }
 
+.navbar .logo {
+    display: flex;
+    align-items: center;
+    opacity: 1.5;
+}
+
 .navbar .logo img {
-    height: 40px;
-    margin-left: 10px;
+    height: 35px;
+    width: auto;
 }
 
 .navbar .menu {
@@ -41,39 +46,35 @@
 .navbar .menu a {
     color: white;
     text-decoration: none;
-    margin: 0 19px;
-    font-size: 16px;
-    cursor: pointer;
+    margin: 0 15px;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 16px;
     white-space: nowrap;
+    letter-spacing: normal;
 }
 
-.navbar .menu a:hover {
-    color: #100f0f;
+/* .navbar .menu a:hover {
     text-decoration: underline;
-}
+  } */
 
 .navbar .login-btn {
     background: linear-gradient(90deg, #FFB84D 0%, #FF8C00 100%);
-    color: rgb(6, 6, 6);
-    Width: auto;
-    Height: 30px;
     border: none;
-    padding: 10px 15px;
-    border-radius: 1000px;
-    font-size: 16px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin-left: -10px;
+    padding: 5px 20px;
+    border-radius: 100px;
+    font-size: 13px;
+    font-weight: 300;
+    line-height: 16px;
+    font-family: 'Inter', sans-serif;
 }
 
 .navbar .login-btn img {
     width: 24px;
     height: auto;
-    padding: 2px 4px 2px 4px;
+    padding: 2px 4px;
     gap: 0px;
-    opacity: 0px;
+    opacity: 1;
 
 }
 
@@ -91,51 +92,60 @@
     margin: 4px 0;
 }
 
-
 /* Media Queries for Responsiveness */
 @media (max-width: 1024px) {
     .navbar .menu a {
-        font-size: 12px; /* Adjust font size for medium screens */
+        font-size: 12px;
+        /* Adjust font size for medium screens */
     }
 
     .navbar .login-btn {
-        font-size: 12px; /* Adjust font size for medium screens */
+        font-size: 12px;
+        /* Adjust font size for medium screens */
     }
 }
 
 @media (max-width: 768px) {
     .navbar {
-        height: 12%; /* Increase height for small screens */
+        height: 12%;
+        /* Increase height for small screens */
     }
 
     .navbar .logo img {
-        height: 30px; /* Reduce logo size for small screens */
+        height: 30px;
+        /* Reduce logo size for small screens */
     }
 
     .navbar .menu {
-        display: none; 
-        margin-left: -20px;/* Hide menu for small screens */
+        display: none;
+        margin-left: -20px;
+        /* Hide menu for small screens */
     }
 
     .navbar .hamburger {
-        display: flex; /* Show hamburger menu for small screens */
+        display: flex;
+        /* Show hamburger menu for small screens */
     }
 
     .navbar .login-btn {
-        font-size: 12px; /* Adjust font size for small screens */
+        font-size: 12px;
+        /* Adjust font size for small screens */
     }
 }
 
 @media (max-width: 480px) {
     .navbar {
-        height: 15%; /* Increase height for very small screens */
+        height: 15%;
+        /* Increase height for very small screens */
     }
 
     .navbar .logo img {
-        height: 20px; /* Further reduce logo size for very small screens */
+        height: 20px;
+        /* Further reduce logo size for very small screens */
     }
 
     .navbar .login-btn {
-        font-size: 10px; /* Further adjust font size for very small screens */
+        font-size: 10px;
+        /* Further adjust font size for very small screens */
     }
 }
