--- a/src/app/components/language-switcher/language-switcher.component.css
+++ b/src/app/components/language-switcher/language-switcher.component.css
@@ -1,61 +1,43 @@
 .language-switcher {
-    width: 100%;
     margin-top: -50px;
-    display: flex; 
-    justify-content: center;
+    padding: 30px; /* Add some padding */
 }
 
-
-.language-switcher button {
-    width: 10%;
-    height: auto;
-    padding: 10px 20px;
-    gap: 10px;
-    border-radius: 100px;
-    opacity: 0px;
-    font-size: 14px;
-    font-family: Inter, sans-serif;
-    border: none;
-    background-color: white;
-
+.language-buttons {
+    display: flex; /* Use flexbox for layout */
+    justify-content: center; /* Center the buttons */
+    align-items: center; /* Center items vertically */
 }
 
-.language-switcher button:hover {
+.language-buttons button {
+    font-family:' Inter', sans-serif;
+    font-size: 16px; 
+    padding: 10px 15px;
+    margin: 0 10px; 
+    border: none; 
+    border-radius: 100px; 
+    background-color: #f8f9fa; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+}
+
+.language-buttons button:hover {
     background: linear-gradient(90deg, rgba(250, 204, 21, 0.1) 0%, rgba(249, 115, 22, 0.1) 100%);
 
 }
 
-
-/* Media Queries for Responsiveness */
-@media (max-width: 1024px) {
-    .language-switcher button {
-        width: 100px; /* Adjust button width for medium screens */
-        font-size: 14px; /* Adjust font size for medium screens */
-    }
+.language-button {
+    font-family:' Inter', sans-serif;
+    font-size: 16px; /* Set font size for Sort By and Filters */
+    cursor: pointer; /* Pointer cursor on hover */
+    padding: 5px; /* Padding for Sort By and Filters */
+    text-align: center; /* Center text */
+    border: 1px solid #ccc; /* Border for Sort By and Filters */
+    border-radius: 5px; /* Rounded corners */
+    background-color: #f8f9fa; /* Light background */
+    transition: background-color 0.3s; /* Transition for hover effect */
 }
 
-@media (max-width: 768px) {
-    .language-switcher {
-        padding: 20px;
-        margin-left: 30px;
-        margin-top: -40px; /* Adjust margin for smaller screens */
-    }
-
-    .language-switcher button {
-        width: 100%; /* Full width for buttons on small screens */
-        font-size: 12px; /* Adjust font size for small screens */
-        padding: 10px 15px; /* Adjust padding for small screens */
-    }
-}
-
-@media (max-width: 480px) {
-    .language-switcher {
-        margin-top: -20px; /* Further adjust margin for very small screens */
-    }
-
-    .language-switcher button {
-        width: 50%; /* Full width for buttons on very small screens */
-        font-size: 10px; /* Further adjust font size for very small screens */
-        padding: 10px; /* Adjust padding for very small screens */
-    }
+.language-button:hover {
+    background: linear-gradient(90deg, rgba(250, 204, 21, 0.1) 0%, rgba(249, 115, 22, 0.1) 100%);
 }
