--- a/src/app/pages/ourastrologers/ourastrologers.component.css
+++ b/src/app/pages/ourastrologers/ourastrologers.component.css
@@ -4,44 +4,50 @@
     margin: 0%;
 }
 
-.title {
-    padding: 150px 190px;
-    text-align: center;
-   
+.flex-container {
+    display: flex; /* Make the container a flex container */
+    flex-direction: column; /* Stack items vertically */
+    justify-content: center; /* Center items vertically */
+    align-items: center; /* Center items horizontally */
+    border: none;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.title h1 {
+.row {
+    width: 100%; /* Ensure rows take full width */
+    display: flex; /* Make the row a flex container */
+    justify-content: center; /* Center content horizontally */
+}
+
+.flex-container h1 {
     font-family: 'Inter', sans-serif;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 400;
     line-height: 58.51px;
     text-align: center;
     color: rgba(30, 58, 138, 1);
-
 }
 
-
-.title p {
+.flex-container p{
     font-family: 'Inter', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 20px;
     text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+    color: rgb(88, 87, 87);
+    margin-bottom: 10px;
 }
 
-.search-container {
+
+.flex-container .search-container {
     display: flex;
     align-items: center;
+    justify-content: center;
     background: rgba(26, 26, 26, 0.05);
-    border-radius: 50px;
-    padding: 10px;
-    width: 400px;
-    height: 50px;
-    margin-left: 27%;
-    margin-top: 30px;
-    margin-bottom: -60px;
+    border-radius: 100px;
+    padding: 5px 5px;
+    margin-top: 20px;
 }
 
 .search-container input {
