--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,18 @@
 html,
 body {
   height: 100%;
-  font-family: Inter;
+  font-family: 'Times New Roman', Times, serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.btn {
+  height: auto;
+  padding: 10px 20px;
+  border-radius: 1000px;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  background: linear-gradient(90deg, #FACC15 0%, #F97316 100%);
 }
